# keen_solver

./: .gitignore  Cargo.toml  README.md  hard_example_notes  profile.sh  puzzles
.cargo/: config.toml
src/: bitset.rs  compatibility_search.rs  exclude_n_in_n.rs  factorization.rs  game.rs  game_id.pest  lib.rs  main.rs  must_be_in_block.rs  only_in_block.rs  permutation.rs  radial_search.rs
test_data/: radial_input  search_depth_2_test_case  single_5_possibility
