[package]
name = "keen_solver"
version = "0.1.0"
edition = "2021"
default-run = "keen_solver"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
pest = "2.7.3"
pest_derive = "2.7.3"
tabled = "0.17.0"
union-find = "0.4.1"
